Add attachment persistence